--- a/nossos_programas.html
+++ b/nossos_programas.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="functions.js"></script>
     <title>SIEB</title>
+    <!-- Outras meta tags e links -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Outras tags do head -->
 </head>
 
 <body>
